tests/paczka1/fuzzy1/87302227.err
Error in line 8: bqKKuhHUv S156 71,2
Error in line 2: 6YsqziwoER A776 60,8
Error in line 7: A726 S353 39,7
Error in line 13: bqKKuhHUv A726 38,1
Error in line 29: QZ4PtMYU S156 68,3
Error in line 39: QZ4PtMYU A7s6 9,9
